(bug 28850) Continue the fix, add some whitespace, fix suggestions
There's now some additional padding for the message, giving it a
friendlier appearance; there's also better detection (rather,
functional detection) of categories that already exist or are
already on the form.

--- a/resources/uploadWizard.css
+++ b/resources/uploadWizard.css
@@ -738,4 +738,5 @@ input.mwe-date {
 .mwe-upwiz-category-will-be-added {
 	font-style:italic;
 	color:gray;
+	padding-left:0.5em;
 }
